wip: hamburger menu slide in mobile navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,19 @@
 <header class="c-header">
-  <nav class="c-navigation">
-    <div class="c-navigation__logo-container">
+    <div class="c-header__logo-container">
       <a href="#">
         <img src="assets/scout-logo-white.svg" class="c-header__logo-image" alt="Scout Airlines logo">
       </a>
     </div>
-    <div class="c-navigation__container-small">
-      <button class="c-navigation__-small-button">
-        <svg width="32" height="40" viewBox="0 0 20 16">
-          <path d="M1 1, 19 1 M1 8, 19 8 M1 15, 19 15" stroke="#FFF" stroke-width="2" fill="none" />
-        </svg>
-      </button>
+    <div class="c-header__menu-button-container">
+    <button class="c-header__menu-button">
+      <svg width="32" height="40" viewBox="0 0 20 16">
+        <path d="M1 1, 19 1 M1 8, 19 8 M1 15, 19 15" stroke="#FFF" stroke-width="2" fill="none" />
+      </svg>
+    </button>
     </div>
+    </header>
+
+    <nav class="c-navigation">
     <div class="c-navigation__container-large">
       <ul class="c-navigation__list">
         <li class="c-navigation__list-item">
@@ -83,4 +85,3 @@
       </ul>
     </div>
   </nav>
-</header>
